Therion 6.0.7 (in progress):

therion:
 * added a new ini file option ‘cs-trans’ for user-defined PROJ transformation
   pipelines between two coordinate systems
 * added support for automatic downloading of PROJ transformation grids used
   in cs-trans pipelines from cdn.proj.org

--------------------------------------------------------------------------------

Therion 6.0.6 (2022-03-12):

therion:
 * added support for hex rgb color specification (e.g. color map-fg ffeeaa)
 * using -value with point extra triggers deprecation warning. It is
   undocumented feature/bug.
 * thbook improvements [#403,404,406,407] (thanks to Rodrigo Severo)
 * support Proj 9.0.0 in test_proj.py

xtherion:
 * bugs fixed:
   - control panel sizing on certain OS and hidpi displays

loch:
 * bugs fixed:
   - mac retina display size fix

infrastructure:
 * cmake: fix a missing icon in therion.exe [#405] (thanks to Matěj Plch)
 * split too long lines in .github/workflows/*.yml
 * support for signed releases: sign the tag + upload a detached signature
   for .tar.gz sources to a Github release (the release is now created by
   the local script make_release.py instead of Github Actions;
   this allows for integration of the rel_notes.py script into make_release.py)

--------------------------------------------------------------------------------

Therion 6.0.5 (2022-02-20):

therion:
 * added support for backtape/backlength readings
 * warning if forwards and backwards readings do not match
   (the difference threshold changed from 2 SD to 3 SD)
 * some missing point and line types added to thbook [#401,402]
 * Catch2 library updated to 2.3.18
 * bugs fixed:
   - lox file generation segfault (solved by poly2tri library update)
   - segfault caused by mixing local and global coordinate system
   - unable to determine direction on zero-length path in scrap [#395]

xtherion:
 * added line section -direction to context menu
 * bugs fixed:
   - fixed a wrong translation