@@ -623,14 +623,24 @@ void thlookup::postprocess() {
         if ((this->m_type == TT_LAYOUT_CCRIT_SCRAP) || (this->m_type == TT_LAYOUT_CCRIT_MAP)) {
           cnt = 0;
           for(nvalid = this->m_table.begin(); nvalid != this->m_table.end(); nvalid++) {
-            switch (cnt % 6) {
-                case 0:  nvalid->m_color = thlayout_color(1.0, 0.5, 0.5); break;
-                case 1:  nvalid->m_color = thlayout_color(0.5, 1.0, 0.5); break;
-                case 2:  nvalid->m_color = thlayout_color(0.5, 0.5, 1.0); break;
-                case 3:  nvalid->m_color = thlayout_color(1.0, 1.0, 0.0); break;
-                case 4:  nvalid->m_color = thlayout_color(0.0, 1.0, 1.0); break;
-                default: nvalid->m_color = thlayout_color(1.0, 0.0, 1.0); break;
-            }
+							switch (cnt % 16) {
+								case 0:  nvalid->m_color = thlayout_color(1.0, 0.5, 0.5); break;
+								case 1:  nvalid->m_color = thlayout_color(0.5, 1.0, 0.5); break;
+								case 2:  nvalid->m_color = thlayout_color(0.5, 0.5, 1.0); break;
+								case 3:  nvalid->m_color = thlayout_color(1.0, 1.0, 0.0); break;
+								case 4:  nvalid->m_color = thlayout_color(0.0, 1.0, 1.0); break;
+								case 5:  nvalid->m_color = thlayout_color(1.0, 0.0, 1.0); break;
+								case 6:  nvalid->m_color = thlayout_color(0.75, 1.0, 1.0); break;
+								case 7:  nvalid->m_color = thlayout_color(1.0, 0.75, 1.0); break;
+								case 8:  nvalid->m_color = thlayout_color(1.0, 1.0, 0.75); break;
+								case 9:  nvalid->m_color = thlayout_color(0.25, 0.75, 1.0); break;
+								case 10: nvalid->m_color = thlayout_color(0.25, 1.0, 0.75); break;
+								case 11: nvalid->m_color = thlayout_color(1.0, 0.75, 0.25); break;
+								case 12: nvalid->m_color = thlayout_color(0.75, 1.0, 0.25); break;
+                case 13: nvalid->m_color = thlayout_color(0.75, 0.25, 1.0); break;
+                case 14: nvalid->m_color = thlayout_color(1.0, 0.25, 0.75); break;
+                default: nvalid->m_color = thlayout_color(0.5, 0.25, 0.75); break;
+							}
             nvalid->m_color.alpha_correct(tmp_alpha);
             nvalid->m_color.defined = 1;
 
