@@ -5,6 +5,8 @@ therion:
    pipelines between two coordinate systems
  * added support for automatic downloading of PROJ transformation grids used
    in cs-trans pipelines from cdn.proj.org
+ * layout: color map-fg scrap now uses more different colors to avoid that
+   connected scraps are colored the same. Needed in labyrinth-like caves.
 
 --------------------------------------------------------------------------------
 
